提交登录页面和首页的显示信息

--- a/LeaRun.Application/LeaRun.Application.Web/Views/Home/AdminLTE.cshtml
+++ b/LeaRun.Application/LeaRun.Application.Web/Views/Home/AdminLTE.cshtml
@@ -55,9 +55,9 @@
         <!--头部信息-->
         <header class="main-header">
             <a href="#" class="logo">
-                <img src="~/Content/images/logo.png" style="height:25px;" />
-                <span class="logo-mini">绩效考核管理</span>
-                <span class="logo-lg" style="font-size:18px; display:inline;">绩效考核管理平台</span>
+                @*<img src="~/Content/images/logo.png" style="height:25px;" />*@
+                <span class="logo-mini">智慧医疗统一管理平台</span>
+                <span class="logo-lg" style="font-size:18px; display:inline;">智慧医疗统一管理平台</span>
             </a>
             <nav class="navbar navbar-static-top">
                 <a class="sidebar-toggle">
