--- a/LeaRun.Application/LeaRun.Application.Web/Areas/DrugConsumableManage/Views/DrugManage/Index.cshtml
+++ b/LeaRun.Application/LeaRun.Application.Web/Areas/DrugConsumableManage/Views/DrugManage/Index.cshtml
@@ -1,5 +1,177 @@
 ﻿@{
     ViewBag.Title = "标准药品信息库";
+    Layout = "~/Views/Shared/_Index.cshtml";
 }
-
-<h2>Index</h2>
+<script>
+    $(function () {
+        InitialPage();
+        GetSchemeType();
+        GetGrid();
+    });
+    //初始化页面
+    function InitialPage() {
+        //resize重设(表格、树形)宽高
+        $(window).resize(function (e) {
+            window.setTimeout(function () {
+                $('#gridTable').setGridWidth(($('.gridPanel').width()));
+                $("#gridTable").setGridHeight($(window).height() - 136.5);
+            }, 200);
+            e.stopPropagation();
+        });
+    }
+    //加载树
+    function GetSchemeType() {
+        //加载药品标准库类型/DrugConsumableManage/DrugManage/
+        $.SetForm({
+            url: "../../DrugConsumableManage/DrugManage/GetDrugType",
+            param: {},
+            success: function (data) {
+                $.each(data, function (id, item) {
+                    var row = '<li><a data-value="' + item.ItemValue + '">' + item.ItemText + '</a></li>';
+                    $('#Year').find('ul').append(row);
+                });
+                //年度选中，生成查询条件
+                $("#Year .dropdown-menu li").click(function () {
+                    var text = $(this).find('a').html();
+                    var value = $(this).find('a').attr('data-value');
+                    $("#Year .dropdown-text").html(text).attr('data-value', value);
+                });
+            }
+        });
+    }
+    var selectedRowIndex = 0;
+    //加载表格
+    function GetGrid() {
+        var $gridTable = $("#gridTable");
+        $gridTable.jqGrid({
+            url: "../../DrugConsumableManage/DrugManage/GetDrugList",
+            datatype: "json",
+            height: $(window).height() - 136.5,
+            autowidth: true,
+            colModel: [
+                { label: "药品代码", name: "YPDM", index:"YPDM",lign:"center" },
+                { label: "药品名称", name: "YPMC", index: "YPMC", align: "center" },
+                { label: "注册名称", name: "YPZCMC", index: "YPZCMC", align: "center" },
+                { label: "注册剂型", name: "YPZCJX", index: "YPZCJX", align: "center" },
+                { label: "注册规格", name: "YPZCGG", index: "YPZCGG", align: "center" },
+                { label: "包装材质", name: "YPBZCZ", index: "YPBZCZ", align: "center" },
+                { label: "最小包装数量", name: "YPZXBZSL", index: "YPZXBZSL", align: "center" },
+                { label: "最小制剂单位", name: "YPZXZJDW", index: "YPZXZJDW", align: "center" },
+                { label: "最小包装单位", name: "YPZXBZDW", index: "YPZXBZDW", align: "center" },
+                { label: "药品企业", name: "YPQY", index: "YPQY", align: "center" },
+                { label: "批准文号", name: "YPPZWH", index: "YPPZWH", align: "center" },
+                { label: "药品本位码", name: "YPBWM", index: "YPBWM", align: "center" },
+                {
+                    label: "是否启用", name: "YXZTNAME", index: "YXZTNAME", align: "center"
+                    //formatter: function (cellvalue, options, rowObject) {
+                    //    return cellvalue == 1 ? "启用" : "停用";
+                    //}
+                },
+            ],
+            viewrecords: true,//显示检索记录
+            rowNum: 30,//每页数量，Pagination的字段rows
+            rowList: [30, 50, 100],
+            pager: "#gridPager",
+            sortname: 'JXND',//排序字段，Pagination的字段sidx，分页必须传
+            sortorder: 'desc',//排序方式，Pagination的字段sord，默认asc
+            rownumbers: true,//是否显示自增序号
+            onSelectRow: function () {
+                selectedRowIndex = $("#" + this.id).getGridParam('selrow');
+            },
+            gridComplete: function () {
+                $("#" + this.id).setSelection(selectedRowIndex, false);
+            }
+        });
+        $gridTable.authorizeColModel($('.gridPanel').width());
+        //查询事件
+        $("#btn_Search").click(function () {
+            var queryJson = {
+                year: $("#Year").find('.dropdown-text').attr('data-value'),
+                orgid: $("#Orgs").find('.dropdown-text').attr('data-value')
+            };
+            $gridTable.jqGrid('setGridParam', {
+                postData: { queryJson: JSON.stringify(queryJson) },
+                //保证搜索时是第一页
+                page: 1
+            }).trigger('reloadGrid');
+        });
+    }
+    //新增
+    function btn_add() {
+        dialogOpen({
+            id: "Form",
+            title: '添加药品信息',
+            url: '/PerfConfig/YearSetting/EditYear',
+            width: "500px",
+            height: "400px",
+            callBack: function (iframeId) {
+                top.frames[iframeId].AcceptClick();
+            }
+        });
+    };
+    //编辑
+    function btn_edit() {
+        var keyValue = $("#gridTable").jqGridRowValue("JXBM");
+        if (checkedRow(keyValue)) {
+            dialogOpen({
+                id: "Form",
+                title: '编辑药品信息',
+                url: '/PerfConfig/YearSetting/EditYear?keyValue=' + keyValue,
+                width: "500px",
+                height: "400px",
+                callBack: function (iframeId) {
+                    top.frames[iframeId].AcceptClick();
+                }
+            });
+        }
+    }
+    //删除
+    function btn_delete() {
+        var keyValue = $("#gridTable").jqGridRowValue("JXBM");
+        if (keyValue) {
+            $.RemoveForm({
+                url: "../../PerfConfig/YearSetting/DelYear",
+                param: { keyValue: keyValue },
+                success: function (data) {
+                    $("#gridTable").trigger("reloadGrid");
+                }
+            });
+        } else {
+            dialogMsg('请选择需要删除的药品', 0);
+        }
+    }
+</script>
+<div class="titlePanel">
+    <div class="title-search">
+        <table>
+            <tr>
+                <td>
+                    <div id="Year" class="btn-group">
+                        <a class="btn btn-default dropdown-text" data-toggle="dropdown">选择药品标准库</a>
+                        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            @*<li><a data-value="2018">2018</a></li>
+                                <li><a data-value="2019">2019</a></li>
+                                <li><a data-value="2020">2020</a></li>*@
+                        </ul>
+                    </div>
+                </td>
+                <td style="padding-left: 5px;">
+                    <a id="btn_Search" class="btn btn-primary"><i class="fa fa-search"></i>&nbsp;查询</a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="toolbar">
+        <div class="btn-group">
+            <a id="lr-add" class="btn btn-default" onclick="btn_add()"><i class="fa fa-plus"></i>&nbsp;新增</a>
+            <a id="lr-edit" class="btn btn-default" onclick="btn_edit()"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
+            <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
+        </div>
+        <script>$('.toolbar').authorizeButton()</script>
+    </div>
+</div>
+<div class="gridPanel">
+    <table id="gridTable"></table>
+    <div id="gridPager"></div>
+</div>
