解决显示问题

--- a/LeaRun.Application/LeaRun.Application.Web/Areas/PerfStrategy/Views/StrategicThemes/Index.cshtml
+++ b/LeaRun.Application/LeaRun.Application.Web/Areas/PerfStrategy/Views/StrategicThemes/Index.cshtml
@@ -153,9 +153,7 @@
                 <td>
                     <div id="year" class="btn-group">
                         <a class="btn btn-default dropdown-text" data-toggle="dropdown">绩效年度</a>
-                        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            <span class="caret"></span>
-                        </a>
+                        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
                         <ul class="dropdown-menu"></ul>
                     </div>
                 </td>
