--- a/LeaRun.Application/LeaRun.Application.Web/Areas/DrugConsumableManage/Views/DrugManage/Index.cshtml
+++ b/LeaRun.Application/LeaRun.Application.Web/Areas/DrugConsumableManage/Views/DrugManage/Index.cshtml
@@ -4,24 +4,43 @@
 }
 <script>
     $(function () {
-        InitialPage();
         GetSchemeType();
         GetGrid();
+        InitialPage();
     });
+
     //初始化页面
-    function InitialPage() {
+    //function InitialPage() {
+    //    //resize重设(表格、树形)宽高
+    //    $(window).resize(function (e) {
+    //        window.setTimeout(function () {
+    //            $('#gridTable').setGridWidth(($('.gridPanel').width()));
+    //            $("#gridTable").setGridHeight($(window).height() - 136.5);
+    //        }, 200);
+    //        e.stopPropagation();
+    //    });
+    //}
+    //初始化页面
+    function initialPage() {
         //resize重设(表格、树形)宽高
         $(window).resize(function (e) {
             window.setTimeout(function () {
-                $('#gridTable').setGridWidth(($('.gridPanel').width()));
-                $("#gridTable").setGridHeight($(window).height() - 136.5);
-            }, 200);
+                resizePage();
+            },
+                200);
             e.stopPropagation();
         });
+        resizePage();
     }
+
+    function resizePage() {
+        $("#gridTable").setGridHeight($(window).height() - 135);
+        $('#gridTable').setGridWidth(($('.gridPanel').width() - 2));
+    };
+
     //加载树
     function GetSchemeType() {
-        //加载药品标准库类型/DrugConsumableManage/DrugManage/
+        //加载药品标准库类型
         $.SetForm({
             url: "../../DrugConsumableManage/DrugManage/GetDrugType",
             param: {},
@@ -39,7 +58,9 @@
             }
         });
     }
+
     var selectedRowIndex = 0;
+
     //加载表格
     function GetGrid() {
         var $gridTable = $("#gridTable");
@@ -49,32 +70,27 @@
             height: $(window).height() - 136.5,
             autowidth: true,
             colModel: [
-                { label: "药品代码", name: "YPDM", index:"YPDM",lign:"center" },
-                { label: "药品名称", name: "YPMC", index: "YPMC", align: "center" },
-                { label: "注册名称", name: "YPZCMC", index: "YPZCMC", align: "center" },
-                { label: "注册剂型", name: "YPZCJX", index: "YPZCJX", align: "center" },
-                { label: "注册规格", name: "YPZCGG", index: "YPZCGG", align: "center" },
-                { label: "包装材质", name: "YPBZCZ", index: "YPBZCZ", align: "center" },
-                { label: "最小包装数量", name: "YPZXBZSL", index: "YPZXBZSL", align: "center" },
-                { label: "最小制剂单位", name: "YPZXZJDW", index: "YPZXZJDW", align: "center" },
-                { label: "最小包装单位", name: "YPZXBZDW", index: "YPZXBZDW", align: "center" },
-                { label: "药品企业", name: "YPQY", index: "YPQY", align: "center" },
-                { label: "批准文号", name: "YPPZWH", index: "YPPZWH", align: "center" },
-                { label: "药品本位码", name: "YPBWM", index: "YPBWM", align: "center" },
-                {
-                    label: "是否启用", name: "YXZTNAME", index: "YXZTNAME", align: "center"
-                    //formatter: function (cellvalue, options, rowObject) {
-                    //    return cellvalue == 1 ? "启用" : "停用";
-                    //}
-                },
+                { label: "药品代码", name: "Drug_Code", index:"Drug_Code",lign:"center" },
+                { label: "药品名称", name: "Drug_Name_SP", index: "Drug_Name_SP", align: "center" },
+                { label: "注册名称", name: "Drug_Name_ZC", index: "Drug_Name_ZC", align: "center" },
+                { label: "注册剂型", name: "Drug_JX", index: "Drug_JX", align: "center" },
+                { label: "注册规格", name: "Drug_GG", index: "YPDrug_GG", align: "center" },
+                { label: "包装材质", name: "Drug_BZCZ", index: "Drug_BZCZ", align: "center" },
+                { label: "最小包装数量", name: "Drug_BZ_Min", index: "Drug_BZ_Min", align: "center" },
+                { label: "最小制剂单位", name: "Drug_BZ_Unit_ZJ", index: "Drug_BZ_Unit_ZJ", align: "center" },
+                { label: "最小包装单位", name: "Drug_BZ_Unit", index: "Drug_BZ_Unit", align: "center" },
+                { label: "药品企业", name: "Drug_QY_Code", index: "Drug_QY_Code", align: "center" },
+                { label: "批准文号", name: "Drug_PZWH", index: "Drug_PZWH", align: "center" },
+                { label: "药品本位码", name: "Drug_BWM", index: "Drug_BWM", align: "center" },
             ],
             viewrecords: true,//显示检索记录
             rowNum: 30,//每页数量，Pagination的字段rows
             rowList: [30, 50, 100],
             pager: "#gridPager",
-            sortname: 'JXND',//排序字段，Pagination的字段sidx，分页必须传
+            sortname: 'Drug_Code',//排序字段，Pagination的字段sidx，分页必须传
             sortorder: 'desc',//排序方式，Pagination的字段sord，默认asc
             rownumbers: true,//是否显示自增序号
+            gridview: true,
             onSelectRow: function () {
                 selectedRowIndex = $("#" + this.id).getGridParam('selrow');
             },
@@ -82,12 +98,11 @@
                 $("#" + this.id).setSelection(selectedRowIndex, false);
             }
         });
-        $gridTable.authorizeColModel($('.gridPanel').width());
+        //$gridTable.authorizeColModel($('.gridPanel').width());
         //查询事件
         $("#btn_Search").click(function () {
             var queryJson = {
                 year: $("#Year").find('.dropdown-text').attr('data-value'),
-                orgid: $("#Orgs").find('.dropdown-text').attr('data-value')
             };
             $gridTable.jqGrid('setGridParam', {
                 postData: { queryJson: JSON.stringify(queryJson) },
@@ -111,7 +126,7 @@
     };
     //编辑
     function btn_edit() {
-        var keyValue = $("#gridTable").jqGridRowValue("JXBM");
+        var keyValue = $("#gridTable").jqGridRowValue("Drug_Code");
         if (checkedRow(keyValue)) {
             dialogOpen({
                 id: "Form",
@@ -127,7 +142,7 @@
     }
     //删除
     function btn_delete() {
-        var keyValue = $("#gridTable").jqGridRowValue("JXBM");
+        var keyValue = $("#gridTable").jqGridRowValue("Drug_Code");
         if (keyValue) {
             $.RemoveForm({
                 url: "../../PerfConfig/YearSetting/DelYear",
@@ -149,11 +164,7 @@
                     <div id="Year" class="btn-group">
                         <a class="btn btn-default dropdown-text" data-toggle="dropdown">选择药品标准库</a>
                         <a class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            @*<li><a data-value="2018">2018</a></li>
-                                <li><a data-value="2019">2019</a></li>
-                                <li><a data-value="2020">2020</a></li>*@
-                        </ul>
+                        <ul class="dropdown-menu"></ul>
                     </div>
                 </td>
                 <td style="padding-left: 5px;">
@@ -168,7 +179,7 @@
             <a id="lr-edit" class="btn btn-default" onclick="btn_edit()"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
             <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
         </div>
-        <script>$('.toolbar').authorizeButton()</script>
+        @*<script>$('.toolbar').authorizeButton()</script>*@
     </div>
 </div>
 <div class="gridPanel">
