--- a/LeaRun.Application/LeaRun.Application.Web/Areas/DrugConsumableManage/Views/DrugManage/DrugHospitalInfo.cshtml
+++ b/LeaRun.Application/LeaRun.Application.Web/Areas/DrugConsumableManage/Views/DrugManage/DrugHospitalInfo.cshtml
@@ -1,5 +1,198 @@
 ﻿@{
-    ViewBag.Title = "医院药品信息-12";
+    ViewBag.Title = "医院/厂商药品信息库";
+    Layout = "~/Views/Shared/_Index.cshtml";
 }
+<script>
+    $(function () {
+        GetSchemeType();
+        GetGrid();
+        InitialPage();
+    });
 
-<h2>DrugHospitalInfo</h2>
+    //初始化页面
+    //function InitialPage() {
+    //    //resize重设(表格、树形)宽高
+    //    $(window).resize(function (e) {
+    //        window.setTimeout(function () {
+    //            $('#gridTable').setGridWidth(($('.gridPanel').width()));
+    //            $("#gridTable").setGridHeight($(window).height() - 136.5);
+    //        }, 200);
+    //        e.stopPropagation();
+    //    });
+    //}
+    //初始化页面
+    function initialPage() {
+        //resize重设(表格、树形)宽高
+        $(window).resize(function (e) {
+            window.setTimeout(function () {
+                resizePage();
+            },
+                200);
+            e.stopPropagation();
+        });
+        resizePage();
+    }
+
+    function resizePage() {
+        $("#gridTable").setGridHeight($(window).height() - 135);
+        $('#gridTable').setGridWidth(($('.gridPanel').width() - 2));
+    };
+
+    //加载树
+    function GetSchemeType() {
+        //加载厂商药品库名称
+        $.SetForm({
+            url: "../../DrugConsumableManage/DrugManage/GetDrugCompanyType",
+            param: {},
+            success: function (data) {
+                $.each(data, function (id, item) {
+                    var row = '<li><a data-value="' + item.ItemValue + '">' + item.ItemText + '</a></li>';
+                    $('#Year').find('ul').append(row);
+                });
+                //厂商选中，生成查询条件
+                $("#Year .dropdown-menu li").click(function () {
+                    var text = $(this).find('a').html();
+                    var value = $(this).find('a').attr('data-value');
+                    $("#Year .dropdown-text").html(text).attr('data-value', value);
+                });
+                //医院选中，生成查询条件
+                $("#hospital .dropdown-menu li").click(function () {
+                    var text = $(this).find('a').html();
+                    var value = $(this).find('a').attr('data-value');
+                    $("#hospital .dropdown-text").html(text).attr('data-value', value);
+                });
+            }
+        });
+    }
+
+    var selectedRowIndex = 0;
+
+    //加载表格
+    function GetGrid() {
+        var $gridTable = $("#gridTable");
+        $gridTable.jqGrid({
+            url: "../../DrugConsumableManage/DrugManage/GetCompanyDrugList",
+            datatype: "json",
+            height: $(window).height() - 136.5,
+            autowidth: true,
+            colModel: [
+                { label: "厂商药品代码", name: "Drug_Code", index: "Drug_Code", lign: "center" },
+                { label: "注册名称", name: "Drug_Name_ZC", index: "Drug_Name_ZC", align: "center" },
+                { label: "厂商药品名称", name: "Drug_Name_SP", index: "Drug_Name_SP", align: "center" },
+                { label: "注册剂型", name: "Drug_JX", index: "Drug_JX", align: "center" },
+                { label: "注册规格", name: "Drug_GG", index: "YPDrug_GG", align: "center" },
+                { label: "包装材质", name: "Drug_BZCZ", index: "Drug_BZCZ", align: "center" },
+                { label: "最小包装数量", name: "Drug_BZ_Min", index: "Drug_BZ_Min", align: "center" },
+                { label: "最小制剂单位", name: "Drug_BZ_Unit_ZJ", index: "Drug_BZ_Unit_ZJ", align: "center" },
+                { label: "最小包装单位", name: "Drug_BZ_Unit", index: "Drug_BZ_Unit", align: "center" },
+                { label: "药品企业", name: "Drug_QY_Code", index: "Drug_QY_Code", align: "center" },
+                { label: "批准文号", name: "Drug_PZWH", index: "Drug_PZWH", align: "center" },
+                { label: "药品本位码", name: "Drug_BWM", index: "Drug_BWM", align: "center" },
+            ],
+            viewrecords: true,//显示检索记录
+            rowNum: 30,//每页数量，Pagination的字段rows
+            rowList: [30, 50, 100],
+            pager: "#gridPager",
+            sortname: 'Drug_Code',//排序字段，Pagination的字段sidx，分页必须传
+            sortorder: 'desc',//排序方式，Pagination的字段sord，默认asc
+            rownumbers: true,//是否显示自增序号
+            gridview: true,
+            onSelectRow: function () {
+                selectedRowIndex = $("#" + this.id).getGridParam('selrow');
+            },
+            gridComplete: function () {
+                $("#" + this.id).setSelection(selectedRowIndex, false);
+            }
+        });
+        //$gridTable.authorizeColModel($('.gridPanel').width());
+        //查询事件
+        $("#btn_Search").click(function () {
+            var queryJson = {
+                year: $("#Year").find('.dropdown-text').attr('data-value'),
+            };
+            $gridTable.jqGrid('setGridParam', {
+                postData: { queryJson: JSON.stringify(queryJson) },
+                //保证搜索时是第一页
+                page: 1
+            }).trigger('reloadGrid');
+        });
+    }
+    //新增
+    function btn_add() {
+        dialogOpen({
+            id: "Form",
+            title: '新增医院药品信息',
+            url: '/DrugConsumableManage/DrugManage/DrugStandardEdit',
+            width: "1200px",
+            height: "800px",
+            callBack: function (iframeId) {
+                top.frames[iframeId].AcceptClick();
+            }
+        });
+    };
+    //编辑
+    function btn_edit() {
+        dialogOpen({
+            id: "Form",
+            title: '修改医院药品信息',
+            url: '/DrugConsumableManage/DrugManage/DrugStandardEdit',
+            width: "1200px",
+            height: "800px",
+            callBack: function (iframeId) {
+                top.frames[iframeId].AcceptClick();
+            }
+        });
+
+    }
+    //删除
+    function btn_delete() {
+
+    }
+</script>
+<div class="titlePanel">
+    <div class="title-search">
+        <table>
+            <tr>
+                <td>
+                    <div id="Year" class="btn-group">
+                        <a class="btn btn-default dropdown-text" data-toggle="dropdown">选择厂商</a>
+                        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+                        <ul class="dropdown-menu"></ul>
+                    </div>
+                </td>
+                <td>
+                    <div id="hospital" class="btn-group">
+                        <a class="btn btn-default dropdown-text" data-toggle="dropdown">选择医院</a>
+                        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#">广东省第一人民医院</a></li>
+                            <li><a tabindex="-1" href="#">华侨医院</a></li>
+                            <li><a tabindex="-1" href="#">红会医院</a></li>
+                        </ul>
+                    </div>
+                </td>
+                <td style="padding-left: 5px;">
+                    <a id="btn_Search" class="btn btn-primary"><i class="fa fa-search"></i>&nbsp;查询</a>
+                </td>
+                <td style="padding-left: 5px;">
+                    <a id="btn_Import" class="btn btn-primary"><i class="fa fa-search"></i>&nbsp;导入医院药品库</a>
+                </td>
+                <td style="padding-left: 5px;">
+                    <a id="btn_Import" class="btn btn-primary"><i class="fa fa-search"></i>&nbsp;导出医院药品库</a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="toolbar">
+        <div class="btn-group">
+            <a id="lr-add" class="btn btn-default" onclick="btn_add()"><i class="fa fa-plus"></i>&nbsp;新增</a>
+            <a id="lr-edit" class="btn btn-default" onclick="btn_edit()"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
+            <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
+        </div>
+        @*<script>$('.toolbar').authorizeButton()</script>*@
+    </div>
+</div>
+<div class="gridPanel">
+    <table id="gridTable"></table>
+    <div id="gridPager"></div>
+</div>
